[tool.poetry]
name = "ga-images"
version = "0.1.0"
description = ""
authors = ["Peter Bozukov <bozukov.p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
a2wsgi = "1.10.0"
brotli-asgi = "1.4.0"
fastapi = "^0.111.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
